@@ -3610,6 +3610,39 @@ prog.cob: 12: warning: ignoring redundant .
 AT_CLEANUP
 
 
+AT_SETUP([IF-ELSE statement with invalid syntax])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  a-variable PIC 9.
+
+       PROCEDURE DIVISION.
+           IF a-variable = 1
+               ACCEPT a-variable, not-a-variable
+                   ON EXCEPTION
+                       CONTINUE
+               END-ACCEPT
+           ELSE
+               CONTINUE
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 11: error: syntax error, unexpected Identifier
+prog.cob: 14: error: syntax error, unexpected END-ACCEPT
+prog.cob: 15: error: syntax error, unexpected ELSE
+prog.cob: 17: error: syntax error, unexpected END-IF
+])
+
+AT_CLEANUP
+
+
 AT_SETUP([STRING / UNSTRING with invalid syntax])
 AT_KEYWORDS([misc])
 
